# AI-MUSIC-GENERATOR-MindMelody

./: 75  README.md  ai_composer.py  ai_composition.mid  ai_input.txt  analyze_midi.py  audio_processor.py  combine_midi.py  compose.py  explore_styles.sh  generate_styles.py  info.nix  input.txt  launch.sh  main.py  music_generator.py  play_music.py  pyproject.toml  run_composer.sh  temp_input.txt  y
generated_compositions_20250325_090002/: classical_composition.mid  electronic_composition.mid  jazz_composition.mid  pop_composition.mid  rock_composition.mid
models/: music_model.py  style_model.py
resources/: help.html
ui/: composer_panel.py  editor_panel.py  main_window.py  playback_panel.py  styles.py
utils/: file_handlers.py  music_theory.py
