[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "librosa>=0.11.0",
    "mido>=1.3.3",
    "music21>=9.5.0",
    "numpy>=1.26.4",
    "pygame>=2.6.1",
    "pyqt5>=5.15.11",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "soundfile>=0.13.1",
]
